--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <base href="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; script-src 'self' 'unsafe-eval'; style-src 'self' 'unsafe-inline';"
+    />
   </head>
 
   <body>
